some error handling + modularization

--- a/components/Chat/Chat.module.css
+++ b/components/Chat/Chat.module.css
@@ -6,7 +6,6 @@
 }
 
 .chatMessages {
-    /* margin: 1.5rem 0; */
     overflow-y: scroll;
     /* hiding scrollbar:  */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
@@ -14,14 +13,15 @@
 }
 
 .chatMessages::-webkit-scrollbar { 
+    /* hiding scrollbar:  */
     display: none;  /* Safari and Chrome */
 }
 
 .chatMessage {
     white-space: pre-wrap; /* Preserve whitespace and wrap text */
     word-wrap: break-word;  /* Ensure long words are broken to fit */
-    /* background-color: black;
-    color: white; */
+    /* background-color: beige;
+    color: black; */
 }
 
 .chatForm {
